[metadata]
name = cab-micutio
version = 0.9.0
author = Michael Wagner
author_email = wagner.mchl@googlemail.com
description = Framework for combined cellular automaton and agent-based models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/micutio/ComplexAutomatonBase
project_urls =
    Bug Tracker = https://github.com/micutio/ComplexAutomatonBase/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
